[gd_scene load_steps=9 format=3 uid="uid://ckshiowikpxhq"]

[ext_resource type="Script" uid="uid://bs5g7m2dybo2l" path="res://scenes/main_menu/main_menu.gd" id="1_0ebjn"]
[ext_resource type="Texture2D" uid="uid://bhykhj0e3hnd3" path="res://scenes/sprites/main_menu_background.png" id="1_nl8w3"]
[ext_resource type="AudioStream" uid="uid://ca5agrih4gtud" path="res://scenes/main_menu/assets/song18.mp3" id="3_ob46e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3rkf3"]
texture = ExtResource("1_nl8w3")
modulate_color = Color(0.758192, 0.758192, 0.758192, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nl8w3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl8w3"]
bg_color = Color(0.989348, 1, 0.687725, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rkf3"]
bg_color = Color(1, 0.778436, 0.7418, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70654"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.7)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ebjn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3rkf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -158.0
offset_right = 229.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nl8w3")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_70654")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nl8w3")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_70654")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nl8w3")
theme_override_styles/hover = SubResource("StyleBoxFlat_nl8w3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3rkf3")
theme_override_styles/normal = SubResource("StyleBoxFlat_70654")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 30.0
offset_right = 114.5
offset_bottom = 123.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "ElemenTUM"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "by GameSchmankerl Studios"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ob46e")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_exit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
